--- a/style.css
+++ b/style.css
@@ -17,17 +17,17 @@ body{
 }
 .sidebar{
   position:fixed;
-  width: 300px;
+  width: 275px;
   height: 100vh;
-  background: #f8f8f8;
+  background: var( --primary-color);
   z-index: 2;
 }
 .main-home{
   position:absolute;
-  width: calc(101% - 300px);
+  width: calc(101% - 318px);
   top:0;
-  left:300px;
-  background: #fff;
+  left:320px;
+  background:var( --primary-color);
   border-radius: 1rem 0 0 1rem;
   z-index: 1000;
 }
@@ -152,7 +152,7 @@ body{
   align-items: center;
 }
 .header-content i{
-  color: #000;
+  color:var( --secondary-color);
   font-size: 20px;
   margin-left: 1rem;
   
@@ -164,6 +164,7 @@ body{
   border-radius: 8px;
   background: var(---gradient);
   margin-left: 1rem;
+  margin-right: 0.3rem;
   
 }
 .header-content .btn i{
@@ -172,62 +173,170 @@ body{
   
 }
 .btn-text{
-  color: #fff;
+  color:  #fff;
 }
 /*stories*/
 .stories-title{
-  display:flex;
-  justify-content:space-between;
-  margin-top:1.8rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
 }
 .stories-title h1{
-  font-size:1rem;
+  font-size: 1.8rem;
 }
 .stories-title .btn{
-  display:flex;
-  align-items:center;
-  color:#000;
+  display: flex;
+  align-items: center;
+  color: #000;
+  margin-right:1.5rem;
   
 }
 .stories-title .btn i{
-  font-size:24px;
-  margin-right:10px;
+  font-size: 24px;
+  margin-right: 15px;
 }
+
 .stories{
-  display:flex;
-  align-items:left;
-  justify-content:space-between;
-  margin-top:2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 2rem;
 }
 .stories-img{
-  display:flex;
-  align-items:center;
-  justify-content:right;
-  width:80px;
-  height:80px;
-  border-radius:50%;
-  border:2px solic #e2336b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 2px solic #e2336b;
 }
 .stories-img img{
-  width:70px;
-  height:70px;
-  object-fit:cover;
-  border-radius:50%;
-  object-position:center;
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  border-radius: 50%;
+  object-position: center;
 }
 .stories-img .color{
-  border:2px solid #dbdbdb;
+  border: 2px solid #dbdbdb;
   
 }
 .stories-img .add{
-  position:absolute;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  width:70px;
+  height: 70px;
+  border-radius: 50%;
+  color:var( --secondary-color);
+  background: hsla(246,100%,67%,0.7);
+}
+
+.feed{
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  margin-top: 0.5rem;
+  
+}
+.feed h1{
+  font-size: 1.7rem;
+  
+}
+.feed-text{
+  display: flex;
+  align-items: center;
+  
+  
+}
+.feed-text h2{
+  font-size: 1rem;
+  margin-left:-20rem;
+
+  
+ 
+  
+}
+.feed-text span{
+  
+  font-size: 1rem;
+  padding-left: 0.5rem;
+}
+.main-post{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(300px,auto));
+  gap:11px;
+  
+}
+.post-box{
+  width: 200px;
+}
+
+.post-box img{
+  width: 100%;
+  margin:2rem;
+  height: 300px;
+  object-fit: cover;
+  object-position:center;
+  border-radius: 0.5rem;
+
+  
+}
+.post-info{
   display:flex;
   align-items:center;
-  justify-content:center;
-  font-size:20px;
-  width:70px;
-  height:70px;
-  border-radius:50%;
-  color:#fff;
-  background:hsla(246,100%,67%,0.7);
+  justify-content: space-between;
+}
+.post-img{
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e2336b;
+}
+.post-img img{
+  width: 27px;
+  height: 27px;
+  object-fit: cover;
+  border-radius: 50%;
+  object-position: center;
+}
+.post-profile{
+  display: flex;
+  align-items: center;
+}
+.psot-profile h3{
+  font-size: 12px;
+  font-weight: 600px;
+  margin-left: 5px;
+}
+.likes{
+  display: flex;
+  align-items: center;
+}
+.likes i{
+  font-size: 20px;
+  margin-left: 7px;
+}
+.likes span{
+  font-size: 14px;
+  margin-left: 7px;
+}
+
+
+:root{
+/*   --primary-color: #edf2fc;
+  --secondary-color: #212121; */
+   --primary-color: #edf2fc;
+   --secondary-color: #212121;
+}
+
+
+#icon{
+  width: 30px;
+  cursor: pointer;
 }
